Remove pinned Crostini apps on uninstall

This CL adds a LauncherCrostiniAppUpdater that ensures the Shelf knows
about app uninstallation so it can remove pinned Crostini apps.

TEST=Manually uninstalled an app and saw the pin disappear. Manually
uninstalled Crostini and saw pins disappear.

Bug: 839699
Change-Id: I81e6b60414ad8766ef159a9ea3969809beb5112c
Reviewed-on: https://chromium-review.googlesource.com/1046605
Reviewed-by: Stefan Kuhne <skuhne@chromium.org>
Commit-Queue: Timothy Loh <timloh@chromium.org>
Cr-Commit-Position: refs/heads/master@{#558175}
Former-commit-id: 7c6293de2931fae672f1f2efdc4ba509a7d496b1