chrome/browser/ui/ash/launcher/chrome_launcher_controller.cc
@@ -49,6 +49,7 @@
 #include "chrome/browser/ui/ash/launcher/internal_app_window_shelf_controller.h"
 #include "chrome/browser/ui/ash/launcher/launcher_arc_app_updater.h"
 #include "chrome/browser/ui/ash/launcher/launcher_controller_helper.h"
+#include "chrome/browser/ui/ash/launcher/launcher_crostini_app_updater.h"
 #include "chrome/browser/ui/ash/launcher/launcher_extension_app_updater.h"
 #include "chrome/browser/ui/ash/launcher/multi_profile_app_window_launcher_controller.h"
 #include "chrome/browser/ui/ash/launcher/multi_profile_browser_status_monitor.h"
@@ -1178,6 +1179,12 @@ void ChromeLauncherController::AttachProfile(Profile* profile_to_attach) {
     std::unique_ptr<LauncherAppUpdater> arc_app_updater(
         new LauncherArcAppUpdater(this, profile()));
     app_updaters_.push_back(std::move(arc_app_updater));
+  }
+
+  if (IsCrostiniUIAllowedForProfile(profile())) {
+    std::unique_ptr<LauncherAppUpdater> crostini_app_updater(
+        new LauncherCrostiniAppUpdater(this, profile()));
+    app_updaters_.push_back(std::move(crostini_app_updater));
   }
 
   app_list::AppListSyncableService* app_service =
